--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <div class="slide is-active ">
           <div class="slide-content">
             <div class="caption">
-              <div class="title">Membership to Al Sadiq Society Now Open</div>
+              <div class="title">Join Al Sadiq</div>
               <div class="text">
-                <p>Between 1st Muharram to 30th Safar 1442AH</p>
+
               </div>
             </div>
           </div>
@@ -121,9 +121,9 @@
         <div class="slide">
           <div class="slide-content">
             <div class="caption">
-              <div class="title">Membership to Al Sadiq Society Now Open</div>
+              <div class="title">Join Al Sadiq</div>
               <div class="text">
-                <p>Between 1st Muharram to 30th Safar 1442AH</p>
+
               </div>
             </div>
           </div>
@@ -134,9 +134,9 @@
         <div class="slide">
           <div class="slide-content">
             <div class="caption">
-              <div class="title">Membership to Al Sadiq Society Now Open</div>
+              <div class="title">Join Al Sadiq</div>
               <div class="text">
-                <p>Between 1st Muharram to 30th Safar 1442AH</p>
+
               </div>
             </div>
           </div>
