--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <div class="slide is-active ">
           <div class="slide-content">
             <div class="caption">
-              <div class="title">Join Al Sadiq</div>
+              <div class="title"></div>
               <div class="text">
-
+                <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
               </div>
             </div>
           </div>
@@ -121,9 +121,9 @@
         <div class="slide">
           <div class="slide-content">
             <div class="caption">
-              <div class="title">Join Al Sadiq</div>
+              <div class="title"></div>
               <div class="text">
-
+                  <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
               </div>
             </div>
           </div>
@@ -134,9 +134,9 @@
         <div class="slide">
           <div class="slide-content">
             <div class="caption">
-              <div class="title">Join Al Sadiq</div>
+              <div class="title"></div>
               <div class="text">
-
+                <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
               </div>
             </div>
           </div>
