--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="mt-3 text-justify">
-                            <h2><span class="font-weight-bold">About</span> Us</h2>
+                            <h2></h2>
                             <h4 class="mt-4"> <span class="text-custom font-weight-bold"></span></h4>
                             <p class="text-muted mt-4">Al-Sadiq Complex G-9 by the Grace of Almighty Allah Bahqqe Muhammado Aale Muhammad (AS) is  the centre of activities of Shia Community in Islamabad, the capital city of Pakistan. Religious activities like daily Prayers, Juma Prayers, Azadari, Majalis, Mahafil, Educational activities like Sunday Classes, Arabic and Persian classes, Counseling Sessions, lectures, seminars, Girls’ School, Social/ Cultural  Events  , Medical Centre,  Ghusle Mayyat Facility, Marriage Bureau, Help for Deserving People are among the services arranged for Momineen and Muslimeen.  </p>
                         </div>
                         <div class="text-left">
-                            <a href="about.html" class="btn btn-custom">Read Me!</a>
+                            <a href="about.html" class="btn btn-custom">Read More!</a>
                         </div>
                     </div>
                 </div>
@@ -195,42 +195,42 @@
                     <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
-                                <i class="fas fa-praying-hands text-custom h2"></i>
+
                                 <h5 class="mb-0">Prayers /Majalis-o-Mahafil</h5>
                                 <div class="services-title-border"></div>
                                 <p class="text-muted mt-3">The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, etc.</p>
                             </div>
                             <div class="text-center">
-                                <a href="prayers-halls.html" class="btn btn-custom">Read Me!</a>
+                                <a href="prayers-halls.html" class="btn btn-custom">Read More!</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
+                      <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                          <div class="mt-4 bg">
+                              <h5 class="mb-0">Maghsal</h5>
+                              <div class="services-title-border"></div>
+                              <p class="text-muted mt-3">The complex has a small but well planned and well-equipped facility for performing Ghusal of, etc.</p>
+                          </div>
+                          <div class="text-center">
+                              <a href="maghsal.html" class="btn btn-custom">Read More!</a>
+                          </div>
+                    </div>
+                </div>
+                    <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
-                                <i class="fas fa-book-open text-custom h2"></i>
+
                                 <h5 class="mb-0">Library</h5>
                                 <div class="services-title-border"></div>
                                 <p class="text-muted mt-3">There is a separate academic block in the Complex. The block houses a well furnished and stocked, etc.</p>
                             </div>
                             <div class="text-center">
-                                <a href="library.html" class="btn btn-custom">Read Me!</a>
+                                <a href="library.html" class="btn btn-custom">Read More!</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                    <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                        <div class="mt-4 bg">
-                            <i class="fas fa-restroom text-custom h2"></i>
-                            <h5 class="mb-0">Maghsal</h5>
-                            <div class="services-title-border"></div>
-                            <p class="text-muted mt-3">The complex has a small but well planned and well-equipped facility for performing Ghusal of, etc.</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="maghsal.html" class="btn btn-custom">Read Me!</a>
-                        </div>
-                    </div>
-                </div>
+
                 </div>
                 <div class="row mt-5">
                   <div class="col-lg-4">
@@ -242,7 +242,7 @@
                                 <p class="text-muted mt-3">There is a separate building which currently houses a girls’ residential religious school. The school is, etc.</p>
                             </div>
                             <div class="text-center">
-                                <a href="girls-school.html" class="btn btn-custom">Read Me!</a>
+                                <a href="girls-school.html" class="btn btn-custom">Read More!</a>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                                 <p class="text-muted mt-3">The academic block also has classrooms, meeting rooms, an auditorium, and offices for the trust and administration, etc.</p>
                             </div>
                             <div class="text-center">
-                                <a href="educational-activities.html" class="btn btn-custom">Read Me!</a>
+                                <a href="educational-activities.html" class="btn btn-custom">Read More!</a>
                             </div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                                 <p class="text-muted mt-3">TTrust has established a marriage bureau for coordination between community members who intend to use this, etc.</p>
                             </div>
                             <div class="text-center">
-                                <a href="marriage-bureau.html" class="btn btn-custom">Read Me!</a>
+                                <a href="marriage-bureau.html" class="btn btn-custom">Read More!</a>
                             </div>
                         </div>
                     </div>
@@ -282,10 +282,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="text-center">
+                        <!-- <div class="text-center">
                             <h2>When You Fall in Poverty, Trade God with Charity</h2>
                             <p>Imam Ali Ibn-e-Abi Talib (A.S.)</p>
-                        </div>
+                        </div> -->
                         <div class="text-center mt-4">
                          <a href="https://alsadiq.digitally.cc/"> <img src="images/donate.gif" alt="" class="img-fluid mx-auto d-block img-thumbnail"></a>
                         </div>
@@ -300,7 +300,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="text-center white">
-                            <h2>Our <span class="font-weight-bold">Upcoming Programs</span></h2>
+                            <h2><span class="font-weight-bold">Upcoming Programs</span></h2>
 
                         </div>
                     </div>
