images and their links are updated
Images and thier links are added

--- a/calendar.html
+++ b/calendar.html
@@ -45,7 +45,7 @@ tbody tr td{
 			<div class="container white">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-12 col-md-auto">
-						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp 1800-547-2145 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@canvas.com</p>
+						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
 					</div>
 					<div class="col-12 col-md-auto">
 					</div>
@@ -78,7 +78,7 @@ tbody tr td{
                         <b>Services</b>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Halls</b></a>
+                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Majalis-o-Mahafil</b></a>
                         <a class="dropdown-item" href="library.html"><b>Library</b></a>
                         <a class="dropdown-item" href="girls-school.html"><b>Girl’s school</b></a>
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
