--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 			<div class="container white">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-12 col-md-auto">
-						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp 1800-547-2145 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@canvas.com</p>
+						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
 					</div>
 					<div class="col-12 col-md-auto">
 					</div>
@@ -75,7 +75,7 @@
                         <b>Services</b>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Halls</b></a>
+                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Majalis-o-Mahafil</b></a>
                         <a class="dropdown-item" href="library.html"><b>Library</b></a>
                         <a class="dropdown-item" href="girls-school.html"><b>Girl’s school</b></a>
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
@@ -130,18 +130,18 @@
                             </div>
                             <div class="mt-3">
                                 <h5 class="mb-0 contact_detail-title font-weight-bold">Email Us At</h5>
-                                <p class="text-muted">Website.Kerri@gmail.com</p>
+                                <p class="text-muted"> info@alsadiq.com</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="text-center">
                             <div>
-                                <i class="fas fa-briefcase text-custom h1"></i>
+                                <i class="fas fa-map-marker text-custom h1"></i>
                             </div>
                             <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold">Visit Office</h5>
-                                <p class="text-muted">202, Grasselli Street , Conway.</p>
+                                <h5 class="mb-0 contact_detail-title font-weight-bold">Al Sadiq Trust</h5>
+                                <p class="text-muted">G 9/2,Islamabad</p>
                             </div>
                         </div>
                     </div>
