--- a/educational-activities.html
+++ b/educational-activities.html
@@ -42,7 +42,7 @@
 			<div class="container white">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-12 col-md-auto">
-						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp 1800-547-2145 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@canvas.com</p>
+						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
 					</div>
 					<div class="col-12 col-md-auto">
 					</div>
@@ -75,7 +75,7 @@
                         <b>Services</b>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Halls</b></a>
+                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Majalis-o-Mahafil</b></a>
                         <a class="dropdown-item" href="library.html"><b>Library</b></a>
                         <a class="dropdown-item" href="girls-school.html"><b>Girl’s school</b></a>
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
@@ -104,20 +104,25 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5">
-                <div class="col-lg-12">
-                    <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                        <div class="mt-4 bg">
-                            <h5 class="mb-0">Educational Activities & Sunday Classes</h5>
-                            <div class="services-title-border"></div>
-                            <p class="text-muted mt-3">The academic block also has classrooms, meeting rooms, an auditorium, and offices for the trust and administration. 
+                <div class="row mt-5 bg">
+                  <div class="col-lg-8">
+                      <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                          <div class="mt-4 bg">
+                              <h5 class="mb-0">Educational Activities & Sunday Classes</h5>
+                              <div class="services-title-border"></div>
+                              <p class="text-muted mt-3">The academic block also has classrooms, meeting rooms, an auditorium, and offices for the trust and administration.
 
-                            The classrooms and auditorium are used for educational activities planned and implemented under the Trust as well as sister organizations.  These activities include programs for religious education, Career Counseling sessions, computer literacy, Seminars and coaching classes.
-
-                            Sunday Classes are one of the most effective activities run by the Trust. Every Sunday classes are arranged under the supervision of Patron in Chief Al-Sadiq Trust HIWM Agha Sheikh Mohammad Shifa Najafi. Students of ages 4-20 years come on every Sunday to get necessary religious education required to follow the path of Ahlulbayet AS.</p>
-                        </div>
+                              The classrooms and auditorium are used for educational activities planned and implemented under the Trust as well as sister organizations.  These activities include programs for religious education, Career Counseling sessions, computer literacy, Seminars and coaching classes.
+                              <br> <br>
+                              Sunday Classes are one of the most effective activities run by the Trust. Every Sunday classes are arranged under the supervision of Patron in Chief Al-Sadiq Trust HIWM Agha Sheikh Mohammad Shifa Najafi. Students of ages 4-20 years come on every Sunday to get necessary religious education required to follow the path of Ahlulbayet AS.</p>
+                          </div>
+                      </div>
+                  </div>
+                    <div class="col-lg-4">
+                      <div class="mt-4">
+                        <img src="images/gallery/education.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
                     </div>
-                </div>
                 </div>
             </div>
         </section>
