--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <b>Services</b>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Halls</b></a>
+                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Majalis-o-Mahafil</b></a>
                         <a class="dropdown-item" href="library.html"><b>Library</b></a>
                         <a class="dropdown-item" href="girls-school.html"><b>Girl’s school</b></a>
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
