--- a/prayers-halls.html
+++ b/prayers-halls.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Prayers / Halls</title>
+        <title>Prayers / Majalis-o-Mahafil</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="SKY" />
@@ -42,7 +42,7 @@
 			<div class="container white">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-12 col-md-auto">
-						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp 1800-547-2145 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@canvas.com</p>
+						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
 					</div>
 					<div class="col-12 col-md-auto">
 					</div>
@@ -75,7 +75,7 @@
                         <b>Services</b>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Halls</b></a>
+                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Majalis-o-Mahafil</b></a>
                         <a class="dropdown-item" href="library.html"><b>Library</b></a>
                         <a class="dropdown-item" href="girls-school.html"><b>Girl’s school</b></a>
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
@@ -104,14 +104,19 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5">
-                    <div class="col-lg-12">
+                <div class="row mt-5 bg">
+                    <div class="col-lg-8">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
-                                <h5 class="mb-0">Prayers / Halls</h5>
+                                <h5 class="mb-0">Prayers / Majalis-o-Mahafil</h5>
                                 <div class="services-title-border"></div>
-                                <p class="text-muted mt-3">Prayer/Majlis Halls. The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, and eid prayers, majalis, milads, other mahafils, and aitkaf and iftar during Ramazn and housing “tabarrukat”. The halls are well furnished and equipped with audio-visual systems. There are adequate facilities both for separate and concurrent attendance of men and women.  Women participate in all prayers with due purdah considerations. There are functions the whole year round to mark all important events on the Islamic/shia calendar.  These activities peak during the month of Muharram. There are Aamaal, majalis, maatam, juloos, shub baidaries, niaz, an qirat events.</p>
+                                <p class="text-muted mt-3">Prayer/Majalis-o-Mahafil Halls. The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, and eid prayers, majalis, milads, other mahafils, and aitkaf and iftar during Ramazn and housing “tabarrukat”. The halls are well furnished and equipped with audio-visual systems. There are adequate facilities both for separate and concurrent attendance of men and women.  Women participate in all prayers with due purdah considerations. There are functions the whole year round to mark all important events on the Islamic/shia calendar.  These activities peak during the month of Muharram. There are Aamaal, majalis, maatam, juloos, shub baidaries, niaz, an qirat events.</p>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="mt-4">
+                          <img src="images/gallery/prayer.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                         </div>
                     </div>
                 </div>
