--- a/girls-school.html
+++ b/girls-school.html
@@ -42,7 +42,7 @@
 			<div class="container white">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-12 col-md-auto">
-						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp 1800-547-2145 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@canvas.com</p>
+						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
 					</div>
 					<div class="col-12 col-md-auto">
 					</div>
@@ -75,7 +75,7 @@
                         <b>Services</b>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Halls</b></a>
+                        <a class="dropdown-item" href="prayers-halls.html"><b>Prayers / Majalis-o-Mahafil</b></a>
                         <a class="dropdown-item" href="library.html"><b>Library</b></a>
                         <a class="dropdown-item" href="girls-school.html"><b>Girl’s school</b></a>
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
@@ -104,16 +104,21 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5">
-                <div class="col-lg-12">
-                    <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                        <div class="mt-4 bg">
-                            <h5 class="mb-0">Girls’ School</h5>
-                            <div class="services-title-border"></div>
-                            <p class="text-muted mt-3">There is a separate building which currently houses a girls’ residential religious school. The school is run by a sister organization and the premises have been provided by the Trust under an agreement with mutual responsibilities and obligations. The school has already acquired the reputation as one of the best of its kind in entire country.</p>
-                        </div>
-                    </div>
-                </div>
+                <div class="row mt-5 bg">
+                  <div class="col-lg-8">
+                      <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                          <div class="mt-4 bg">
+                              <h5 class="mb-0">Girls’ School</h5>
+                              <div class="services-title-border"></div>
+                              <p class="text-muted mt-3">There is a separate building which currently houses a girls’ residential religious school. The school is run by a sister organization and the premises have been provided by the Trust under an agreement with mutual responsibilities and obligations. The school has already acquired the reputation as one of the best of its kind in entire country.</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-4">
+                        <img src="images/gallery/7.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
                 </div>
             </div>
         </section>
