--- a/calendar.html
+++ b/calendar.html
@@ -112,7 +112,7 @@ tbody tr td{
                       <div class="col-lg-12">
                           <div class="text-right white">
                             <h3 align="center" dir="rtl"> ایونٹ کیلنڈر الصادق ٹرسٹ</h3>
-                            <table border="1" cellspacing="0" cellpadding="0" width="558">
+                            <table border="1" cellspacing="0" cellpadding="0">
                               <tr>
                                 <td width="162" valign="top"><br />
                                   نوعیت ،  تعداد     پروگرام<span dir="ltr"> </span></td>
