--- a/index.html
+++ b/index.html
@@ -101,67 +101,42 @@
           </div>
       </nav>
       <!-- End Navbar -->
-      <main class="main-content">
-  <section class="slideshow">
-    <div class="slideshow-inner">
-      <div class="slides">
-        <div class="slide is-active ">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title"></div>
-              <div class="text">
-                <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
+
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="images/header-bg.jpg" alt="First slide">
+                  <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
+                    <h1>JOIN AL SADIQ</h1>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/header-bg3.jpg" alt="Second slide">
+                  <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
+                    <h1>JOIN AL SADIQ</h1>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/header-bg2.jpg" alt="Third slide">
+                  <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
+                    <h1>JOIN AL SADIQ</h1>
+                  </div>
+                </div>
               </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-          </div>
-          <div class="image-container">
-            <img src="images/header-bg.jpg" alt="" class="image" />
-          </div>
-        </div>
-        <div class="slide">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title"></div>
-              <div class="text">
-                  <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
-              </div>
-            </div>
-          </div>
-          <div class="image-container">
-            <img src="images/header-bg3.jpg" alt="" class="image" />
-          </div>
-        </div>
-        <div class="slide">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title"></div>
-              <div class="text">
-                <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
-              </div>
-            </div>
-          </div>
-          <div class="image-container">
-            <img src="images/header-bg2.jpg" alt="" class="image" />
-          </div>
-        </div>
-      </div>
-      <div class="arrows">
-        <div class="arrow prev">
-          <span class="svg svg-arrow-left">
-            <svg version="1.1" id="svg4-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> <path d="M13,26c-0.256,0-0.512-0.098-0.707-0.293l-12-12c-0.391-0.391-0.391-1.023,0-1.414l12-12c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414L2.414,13l11.293,11.293c0.391,0.391,0.391,1.023,0,1.414C13.512,25.902,13.256,26,13,26z"/> </svg>
-            <span class="alt sr-only"></span>
-          </span>
-        </div>
-        <div class="arrow next">
-          <span class="svg svg-arrow-right">
-            <svg version="1.1" id="svg5-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> <path d="M1,0c0.256,0,0.512,0.098,0.707,0.293l12,12c0.391,0.391,0.391,1.023,0,1.414l-12,12c-0.391,0.391-1.023,0.391-1.414,0s-0.391-1.023,0-1.414L11.586,13L0.293,1.707c-0.391-0.391-0.391-1.023,0-1.414C0.488,0.098,0.744,0,1,0z"/> </svg>
-            <span class="alt sr-only"></span>
-          </span>
-        </div>
-      </div>
-    </div>
-  </section>
-</main>
         <!-- START ABOUT -->
         <section class="section" id="about">
             <div class="container">
@@ -278,16 +253,24 @@
         <!-- END SERVICES -->
 
         <!-- START CTA -->
-        <section class="section">
+        <section class="section bg-light" id="services">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <!-- <div class="text-center">
-                            <h2>When You Fall in Poverty, Trade God with Charity</h2>
-                            <p>Imam Ali Ibn-e-Abi Talib (A.S.)</p>
-                        </div> -->
-                        <div class="text-center mt-4">
-                         <a href="https://alsadiq.digitally.cc/"> <img src="images/donate.gif" alt="" class="img-fluid mx-auto d-block img-thumbnail"></a>
+                    <div class="col-lg-6">
+                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
+                            <div class="mt-3 bg-light1 white">
+                                <h5 class="mb-0">How To Join Us</h5>
+                                <div class="services-title-border"></div>
+                                <p class="mt-3"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
+                            <div class="mt-3 bg-light1 white">
+                                <h5 class="mb-0">How To Donate Us</h5>
+                                <div class="services-title-border"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -343,17 +326,17 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg">
-                            <div class="mt-3 bg">
+                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
+                            <div class="mt-3 bg-light1 white">
                                 <h5 class="mb-0">Recent Jobs</h5>
                                 <div class="services-title-border"></div>
-                                <p class="text-muted mt-3">Currently There Are No Jobs Posted</p>
+                                <p class="mt-3">Currently There Are No Jobs Posted</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg">
-                            <div class="mt-3 bg">
+                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
+                            <div class="mt-3 bg-light1 white">
                                 <h5 class="mb-0">Weekly Program</h5>
                                 <div class="services-title-border"></div>
                                 <p><b>Friday:</b></p>
