weekly program color update
weekly program color update

--- a/index.html
+++ b/index.html
@@ -339,13 +339,19 @@
                             <div class="mt-3 bg-light1 white">
                                 <h5 class="mb-0">Weekly Program</h5>
                                 <div class="services-title-border"></div>
-                                <p><b>Friday:</b></p>
+                                <div class="services-boxes2 rounded p-1 mt-4">
+                                <p class="yellow"><b>Friday:</b></p>
                                 <p>After Fajar prayers Duae Nudba</p>
                                 <p>After Maghrabain Hadeese Kisa</p>
-                                <p><b>Tuesday:</b></p>
+                                </div>
+                                <div class="services-boxes2 rounded p-1 mt-4">
+                                <p class="pink"><b>Tuesday:</b></p>
                                 <p>After Maghrabain Duae Tawassul</p>
-                                <p><b>Thursday:</b></p>
+                                </div>
+                                <div class="services-boxes2 rounded p-1 mt-4">
+                                <p class="orange"><b>Thursday:</b></p>
                                 <p>After Maghrabain Duae Kumail n Majlis for Eesale Thawab Marhumin</p>
+                                </div>
                             </div>
                         </div>
                     </div>
