--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="images/header-bg.jpg" alt="First slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <h1>JOIN AL SADIQ</h1>
+                    <h5>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/header-bg3.jpg" alt="Second slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <h1>JOIN AL SADIQ</h1>
+                    <h5>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/header-bg2.jpg" alt="Third slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <h1>JOIN AL SADIQ</h1>
+                    <h5>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</h5>
                   </div>
                 </div>
               </div>
