--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="images/header-bg.jpg" alt="First slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <h5>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</h5>
+                    <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/header-bg3.jpg" alt="Second slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <h5>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</h5>
+                    <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/header-bg2.jpg" alt="Third slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <h5>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</h5>
+                    <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
                   </div>
                 </div>
               </div>
@@ -240,7 +240,7 @@
                                 <i class="fab fa-cotton-bureau text-custom h2"></i>
                                 <h5 class="mb-0">Marriage Bureau</h5>
                                 <div class="services-title-border"></div>
-                                <p class="text-muted mt-3">TTrust has established a marriage bureau for coordination between community members who intend to use this, etc.</p>
+                                <p class="text-muted mt-3">Trust has established a marriage bureau for coordination between community members who intend to use this, etc.</p>
                             </div>
                             <div class="text-center">
                                 <a href="marriage-bureau.html" class="btn btn-custom">Read More!</a>
