--- a/index.html
+++ b/index.html
@@ -253,23 +253,63 @@
         <!-- END SERVICES -->
 
         <!-- START CTA -->
-        <section class="section bg-light" id="services">
+        <section class="section bg-light" id="join-us">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
+                        <div class="services-boxes3 rounded p-4 mt-4 bg-light1">
                             <div class="mt-3 bg-light1 white">
-                                <h5 class="mb-0">How To Join Us</h5>
+                                <h5 class="mb-0 text-center">How to Join/Collaborate with Al-Sadiq Trust</h5>
+                                <p class="text-center">(With General Donations, Sadaqat, and Khums)</p>
                                 <div class="services-title-border"></div>
-                                <p class="mt-3"></p>
+                                <p class="mt-3">
+                                <ul>
+                                  <li>
+                                    Choosing any event/Majlis/ mahfil/seminar from Event Calendar and sponsor it for Eesale Thawab to your Marhumin and for your own Thawab, prosperity and health
+                                  </li>
+                                  <li>
+                                  Sponsor Eesale Thawab of Specific Khamsa (Five-day) Majlis like in Muharram, Safar or Ayyame Fatimiyah as,
+                                  </li>
+                                  <li>
+                                  Take Azadari share for Muharram, Safar Majalis and Ayyame Wiladat Shahadat of Masumin ( Azadari Share is a fixed share in Azadari through out the year comprising, PKR3000, 2000 and 1000)
+                                  </li>
+                                  <li>
+                                  Support Education of deserving students
+                                  </li>
+                                  <li>
+                                  Support needy Momineen through Khums and Sadaqat
+                                  </li>
+                                  <li>
+                                  Support our Sunday Classes that impart necessary religious education needed to spend life according to Talemmate Ahlulbayt AS
+                                  </li>
+                                  <li>
+                                  Arrange Online Majalis and sponsor on line Majalis/ Seminar for Eesale Thawab of your Marhumin
+                                  </li>
+                                  <li>
+                                  Support in IT equipment for live streaming of events and Security equipment etc
+                                  </li>
+                                  <li>
+                                  Support our Medical Centre with donation, medicine, equipment etc
+                                  </li>
+                                  <li>
+                                  Support our library for  books and facilities
+                                  </li>
+                                  <li>
+                                  Support of Maghsal  System ( Ghusle Mayyat, Tahjizo Takfeen, Ambulance )
+                                  </li>
+                                </ul>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
+                        <div class="text-center services-boxes4 rounded p-4 mt-4 bg-light1">
                             <div class="mt-3 bg-light1 white">
                                 <h5 class="mb-0">How To Donate Us</h5>
                                 <div class="services-title-border"></div>
+                                <p class="mt-3">
+                                  <a href="https://alsadiq.digitally.cc/" style="color:White">Click to Donate Alsadiq Trust</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -317,11 +357,11 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
-                        <div class="text-center">
+                        <!-- <div class="text-center">
                             <h5>The Mind of a Wise Man is the Safest Custody of Secrets; Cheerfulness is the Key to Friendship;
         Patience and Forbearance will Conceal Many Defects</h5>
                             <p>Imam Ali Ibn-e-Abi Talib (A.S.)</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="row">
@@ -345,11 +385,11 @@
                                 <p>After Maghrabain Hadeese Kisa</p>
                                 </div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
-                                <p class="pink"><b>Tuesday:</b></p>
+                                <p class="yellow"><b>Tuesday:</b></p>
                                 <p>After Maghrabain Duae Tawassul</p>
                                 </div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
-                                <p class="orange"><b>Thursday:</b></p>
+                                <p class="yellow"><b>Thursday:</b></p>
                                 <p>After Maghrabain Duae Kumail n Majlis for Eesale Thawab Marhumin</p>
                                 </div>
                             </div>
