--- a/index.html
+++ b/index.html
@@ -112,19 +112,16 @@
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="images/header-bg.jpg" alt="First slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="images/header-bg3.jpg" alt="Second slide">
+                  <img class="d-block w-100" src="images/header-bg2.jpg" alt="Second slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="images/header-bg2.jpg" alt="Third slide">
+                  <img class="d-block w-100" src="images/header-bg3.jpg" alt="Third slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
-                    <p>Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
                   </div>
                 </div>
               </div>
@@ -137,11 +134,23 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                      <p class="text-center">Masjido Imam Bargah Al-Sadiq Trust Rgtd G-9/2, Islamabad, Pakistan</p>
+                    </div>
+                </div>
+            </div>
         <!-- START ABOUT -->
         <section class="section" id="about">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
+                        <div class="mt-3">
+                            <img src="images/header-bg.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
                         <div class="mt-3 text-justify">
                             <h2></h2>
                             <h4 class="mt-4"> <span class="text-custom font-weight-bold"></span></h4>
@@ -380,17 +389,17 @@
                                 <h5 class="mb-0">Weekly Program</h5>
                                 <div class="services-title-border"></div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
-                                <p class="yellow"><b>Friday:</b></p>
-                                <p>After Fajar prayers Duae Nudba</p>
-                                <p>After Maghrabain Hadeese Kisa</p>
-                                </div>
-                                <div class="services-boxes2 rounded p-1 mt-4">
                                 <p class="yellow"><b>Tuesday:</b></p>
                                 <p>After Maghrabain Duae Tawassul</p>
                                 </div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
                                 <p class="yellow"><b>Thursday:</b></p>
                                 <p>After Maghrabain Duae Kumail n Majlis for Eesale Thawab Marhumin</p>
+                                </div>
+                                <div class="services-boxes2 rounded p-1 mt-4">
+                                <p class="yellow"><b>Friday:</b></p>
+                                <p>After Fajar prayers Duae Nudba</p>
+                                <p>After Maghrabain Hadeese Kisa</p>
                                 </div>
                             </div>
                         </div>
@@ -399,39 +408,6 @@
             </div>
         </section>
         <!-- END updates -->
-        <!-- START Video -->
-        <section class="section" style="background-image: url('images/1.jpg')">
-            <div class="container">
-                <!-- <div class="row justify-content-center">
-                    <div class="col-lg-12">
-                        <div class="text-center services-boxes rounded p-4 mt-4 bg-light1">
-                            <div class="mt-3 bg-light1 white">
-                                <h5>Live Amongst People in Such a Manner That if You Die They Weep Over You and if You are Alive They Crave for Your Company.</h5>
-                                <p>Imam Ali Ibn-e-Abi Talib (A.S.)</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <div class="row align-items-center">
-                    <div class="col-lg-12">
-                      <div class="mt-3">
-                        <iframe width="100%" height="374" src="https://www.youtube.com/embed/mEXHzD1U5M4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      </div>
-                </div>
-                </div>
-                    <div class="row justify-content-center">
-                        <div class="col-lg-12">
-                            <div class="text-center services-boxes rounded p-4 mt-4 bg-light1">
-                                <div class="mt-4 bg-light1 white">
-                                  <a href="https://www.youtube.com/channel/UCL_1RhEhP_CeeHd_d4aj8qg" class="white"><strong>Click Here To Visit Our YouTube Channel for Al Sadiq Live Events</strong></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-              </div>
-        </section>
-        <!-- END video -->
-
         <!-- START CONTACT -->
         <section class="section bg-light1" id="contact">
             <div class="container">
@@ -513,9 +489,6 @@
             </div>
           </div>
         </div>
-                <!-- Back To Top -->
-        <a href="#" class="back_top"> <i class="mdi mdi-chevron-up"> </i> </a>
-
         <!-- JAVASCRIPTS -->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
