--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                       </div>
                     </li>
                       <li class="nav-item">
+                          <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
                       </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -170,8 +170,8 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
-                        <div class="text-center white">
-                            <h2>Our <span class="font-weight-bold">Services</span></h2>
+                        <div class="text-center black">
+                            <h2 class="font-weight-bold">Our <span class="font-weight-bold">Services</span></h2>
                         </div>
                     </div>
                 </div>
@@ -260,16 +260,15 @@
             </div>
         </section>
         <!-- END SERVICES -->
-
         <!-- START CTA -->
         <section class="section bg-light" id="join-us">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="services-boxes3 rounded p-4 mt-4 bg-light1">
+                        <div class="services-boxes rounded p-4 mt-4 bg-light1">
                             <div class="mt-3 bg-light1 white">
-                                <h5 class="mb-0 text-center">How to Join/Collaborate with Al-Sadiq Trust</h5>
-                                <p class="text-center">(With General Donations, Sadaqat, and Khums)</p>
+                                <h5 class="mb-0 text-center black">How to Join/Collaborate with Al-Sadiq Trust</h5>
+                                <p class="text-center black">(With General Donations, Sadaqat, and Khums)</p>
                                 <div class="services-title-border"></div>
                                 <p class="mt-3">
                                 <ul>
@@ -312,9 +311,9 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes4 rounded p-4 mt-4 bg-light1">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg-light1">
                             <div class="mt-3 bg-light1 white">
-                                <h5 class="mb-0">How To Donate Us</h5>
+                                <h5 class="mb-0 black">How To Donate Us</h5>
                                 <div class="services-title-border"></div>
                                 <p class="mt-3">
                                   <a href="https://alsadiq.digitally.cc/" style="color:White">Click to Donate Alsadiq Trust</a>
@@ -375,8 +374,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
-                            <div class="mt-3 bg-light1 white">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg-light1">
+                            <div class="mt-3 bg-light1 black">
                                 <h5 class="mb-0">Recent Jobs</h5>
                                 <div class="services-title-border"></div>
                                 <p class="mt-3">Currently There Are No Jobs Posted</p>
@@ -384,20 +383,20 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="text-center services-boxes1 rounded p-4 mt-4 bg-light1">
-                            <div class="mt-3 bg-light1 white">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg-light1">
+                            <div class="mt-3 bg-light1 black">
                                 <h5 class="mb-0">Weekly Program</h5>
                                 <div class="services-title-border"></div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
-                                <p class="yellow"><b>Tuesday:</b></p>
+                                <p class="g"><b>Tuesday:</b></p>
                                 <p>After Maghrabain Duae Tawassul</p>
                                 </div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
-                                <p class="yellow"><b>Thursday:</b></p>
+                                <p class="g"><b>Thursday:</b></p>
                                 <p>After Maghrabain Duae Kumail n Majlis for Eesale Thawab Marhumin</p>
                                 </div>
                                 <div class="services-boxes2 rounded p-1 mt-4">
-                                <p class="yellow"><b>Friday:</b></p>
+                                <p class="g"><b>Friday:</b></p>
                                 <p>After Fajar prayers Duae Nudba</p>
                                 <p>After Maghrabain Hadeese Kisa</p>
                                 </div>
@@ -412,9 +411,9 @@
         <section class="section bg-light1" id="contact">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-12 white">
+                    <div class="col-lg-12 black">
                         <div class="text-center">
-                            <h2><span class="font-weight-bold">Contact</span> Us</h2>
+                            <h2 class="font-weight-bold"><span class="font-weight-bold">Contact</span> Us</h2>
                             <p class="text-muted mx-auto section-subtitle mt-3"></p>
                         </div>
                     </div>
@@ -423,7 +422,7 @@
                     <div class="col-lg-4">
                         <div class="text-center">
                             <div>
-                                <i class="fas fa-phone h1 white"></i>
+                                <i class="fas fa-phone h1 g"></i>
                             </div>
                             <div class="mt-3">
                                 <h5 class="mb-0 contact_detail-title font-weight-bold white">Call Us On</h5>
@@ -434,7 +433,7 @@
                     <div class="col-lg-4">
                         <div class="text-center">
                             <div>
-                                <i class="fas fa-envelope white h1"></i>
+                                <i class="fas fa-envelope g h1"></i>
                             </div>
                             <div class="mt-3">
                                 <h5 class="mb-0 contact_detail-title font-weight-bold white">Email Us At</h5>
@@ -445,7 +444,7 @@
                     <div class="col-lg-4">
                         <div class="text-center">
                             <div>
-                                <i class="fas fa-map-marker white h1"></i>
+                                <i class="fas fa-map-marker g h1"></i>
                             </div>
                             <div class="mt-3">
                                 <h5 class="white mb-0 contact_detail-title font-weight-bold">Al Sadiq Trust</h5>
