adjust padding, navbar, contact details
adjust padding, navbar, contact details

--- a/calendar.html
+++ b/calendar.html
@@ -86,12 +86,12 @@ tbody tr td{
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -110,7 +110,7 @@ tbody tr td{
                   <div class="row justify-content-center">
                     <div class="row mt-5">
                       <div class="col-lg-12">
-                          <div class="text-right white">
+                          <div class="text-right black">
                             <h3 align="center" dir="rtl"> ایونٹ کیلنڈر الصادق ٹرسٹ</h3>
                             <table border="1" cellspacing="0" cellpadding="0">
                               <tr>
