--- a/prayers-halls.html
+++ b/prayers-halls.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -104,21 +104,21 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5 bg">
-                    <div class="col-lg-8">
-                        <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                            <div class="mt-4 bg">
-                                <h5 class="mb-0">Prayers / Majalis-o-Mahafil</h5>
-                                <div class="services-title-border"></div>
-                                <p class="text-muted mt-3">Prayer/Majalis-o-Mahafil Halls. The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, and eid prayers, majalis, milads, other mahafils, and aitkaf and iftar during Ramazn and housing “tabarrukat”. The halls are well furnished and equipped with audio-visual systems. There are adequate facilities both for separate and concurrent attendance of men and women.  Women participate in all prayers with due purdah considerations. There are functions the whole year round to mark all important events on the Islamic/shia calendar.  These activities peak during the month of Muharram. There are Aamaal, majalis, maatam, juloos, shub baidaries, niaz, an qirat events.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row bg">
                     <div class="col-lg-4">
                         <div class="mt-4">
                           <img src="images/gallery/prayer.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                         </div>
                     </div>
+                        <div class="col-lg-8">
+                            <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                                <div class="mt-4 bg">
+                                    <h5 class="mb-0">Prayers / Majalis-o-Mahafil</h5>
+                                    <div class="services-title-border"></div>
+                                    <p class="text-muted mt-3">Prayer/Majalis-o-Mahafil Halls. The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, and eid prayers, majalis, milads, other mahafils, and aitkaf and iftar during Ramazn and housing “tabarrukat”. The halls are well furnished and equipped with audio-visual systems. There are adequate facilities both for separate and concurrent attendance of men and women.  Women participate in all prayers with due purdah considerations. There are functions the whole year round to mark all important events on the Islamic/shia calendar.  These activities peak during the month of Muharram. There are Aamaal, majalis, maatam, juloos, shub baidaries, niaz, an qirat events.</p>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </section>
