--- a/about.html
+++ b/about.html
@@ -84,11 +84,11 @@
                       </div>
                     </li>
                       <li class="nav-item">
+                          <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
                       </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -106,12 +106,12 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
-                        <div class="text-center white">
-                            <h2>About <span class="font-weight-bold">Us</span></h2>
+                        <div class="text-center black">
+                            <h2 class="font-weight-bold">About <span class="font-weight-bold">Us</span></h2>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
@@ -136,7 +136,7 @@ Minutes of all meetings are recorded and documented.  All trustees attend the me
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center services-boxes rounded p-4 mt-4 bg">
                         <div class="mt-4 bg">
