--- a/contact.html
+++ b/contact.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -107,11 +107,11 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <h2><span class="font-weight-bold">Contact</span> Us</h2>
+                            <h2 class="font-weight-bold"><span class="font-weight-bold">Contact</span> Us</h2>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-2">
                     <div class="col-lg-4">
                         <div class="text-center">
                             <div>
@@ -119,18 +119,7 @@
                             </div>
                             <div class="mt-3">
                                 <h5 class="mb-0 contact_detail-title font-weight-bold">Call Us On</h5>
-                                <p class="text-muted">+985 123 7856</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="text-center">
-                            <div>
-                                <i class="fas fa-envelope text-custom h1"></i>
-                            </div>
-                            <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold">Email Us At</h5>
-                                <p class="text-muted"> info@alsadiq.com</p>
+                                <p class="text-muted">+92(51) 2851996</p>
                             </div>
                         </div>
                     </div>
@@ -142,6 +131,18 @@
                             <div class="mt-3">
                                 <h5 class="mb-0 contact_detail-title font-weight-bold">Al Sadiq Trust</h5>
                                 <p class="text-muted">G 9/2,Islamabad</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="text-center">
+                                <ul class="list-unstyled list-inline mb-3">
+                                    <li class="list-inline-item"><a href="https://www.facebook.com/alsadiqtrust/"><i class="fab fa-facebook g h1"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://twitter.com/alsadiqtrust"><i class="fab fa-twitter g h1"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.youtube.com/user/alsadiqtrust"><i class="fab fa-youtube g h1"></i></a></li>
+                                </ul>
+                            <div class="mt-3">
+                                <h5 class="mb-0 contact_detail-title font-weight-bold black">Follow Us On</h5>
                             </div>
                         </div>
                     </div>
