--- a/educational-activities.html
+++ b/educational-activities.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -104,25 +104,25 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5 bg">
-                  <div class="col-lg-8">
-                      <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                          <div class="mt-4 bg">
-                              <h5 class="mb-0">Educational Activities & Sunday Classes</h5>
-                              <div class="services-title-border"></div>
-                              <p class="text-muted mt-3">The academic block also has classrooms, meeting rooms, an auditorium, and offices for the trust and administration.
-
-                              The classrooms and auditorium are used for educational activities planned and implemented under the Trust as well as sister organizations.  These activities include programs for religious education, Career Counseling sessions, computer literacy, Seminars and coaching classes.
-                              <br> <br>
-                              Sunday Classes are one of the most effective activities run by the Trust. Every Sunday classes are arranged under the supervision of Patron in Chief Al-Sadiq Trust HIWM Agha Sheikh Mohammad Shifa Najafi. Students of ages 4-20 years come on every Sunday to get necessary religious education required to follow the path of Ahlulbayet AS.</p>
-                          </div>
-                      </div>
-                  </div>
+                <div class="row bg">
                     <div class="col-lg-4">
                       <div class="mt-4">
                         <img src="images/gallery/education.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                     </div>
+                      <div class="col-lg-8">
+                          <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                              <div class="mt-4 bg">
+                                  <h5 class="mb-0">Educational Activities & Sunday Classes</h5>
+                                  <div class="services-title-border"></div>
+                                  <p class="text-muted mt-3">The academic block also has classrooms, meeting rooms, an auditorium, and offices for the trust and administration.
+
+                                  The classrooms and auditorium are used for educational activities planned and implemented under the Trust as well as sister organizations.  These activities include programs for religious education, Career Counseling sessions, computer literacy, Seminars and coaching classes.
+                                  <br> <br>
+                                  Sunday Classes are one of the most effective activities run by the Trust. Every Sunday classes are arranged under the supervision of Patron in Chief Al-Sadiq Trust HIWM Agha Sheikh Mohammad Shifa Najafi. Students of ages 4-20 years come on every Sunday to get necessary religious education required to follow the path of Ahlulbayet AS.</p>
+                              </div>
+                          </div>
+                      </div>
                 </div>
             </div>
         </section>
