--- a/girls-school.html
+++ b/girls-school.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -104,21 +104,21 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5 bg">
-                  <div class="col-lg-8">
-                      <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                          <div class="mt-4 bg">
-                              <h5 class="mb-0">Girls’ School</h5>
-                              <div class="services-title-border"></div>
-                              <p class="text-muted mt-3">There is a separate building which currently houses a girls’ residential religious school. The school is run by a sister organization and the premises have been provided by the Trust under an agreement with mutual responsibilities and obligations. The school has already acquired the reputation as one of the best of its kind in entire country.</p>
-                          </div>
-                      </div>
-                  </div>
+                <div class="row bg">
                   <div class="col-lg-4">
                       <div class="mt-4">
                         <img src="images/gallery/7.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
+                    <div class="col-lg-8">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                            <div class="mt-4 bg">
+                                <h5 class="mb-0">Girls’ School</h5>
+                                <div class="services-title-border"></div>
+                                <p class="text-muted mt-3">There is a separate building which currently houses a girls’ residential religious school. The school is run by a sister organization and the premises have been provided by the Trust under an agreement with mutual responsibilities and obligations. The school has already acquired the reputation as one of the best of its kind in entire country.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
