--- a/index.html
+++ b/index.html
@@ -175,11 +175,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row">
                     <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
-
                                 <h5 class="mb-0">Prayers /Majalis-o-Mahafil</h5>
                                 <div class="services-title-border"></div>
                                 <p class="text-muted mt-3">The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, etc.</p>
@@ -204,7 +203,6 @@
                     <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
-
                                 <h5 class="mb-0">Library</h5>
                                 <div class="services-title-border"></div>
                                 <p class="text-muted mt-3">There is a separate academic block in the Complex. The block houses a well furnished and stocked, etc.</p>
@@ -216,7 +214,7 @@
                     </div>
 
                 </div>
-                <div class="row mt-5">
+                <div class="row">
                   <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
@@ -271,7 +269,7 @@
                                 <p class="text-center black">(With General Donations, Sadaqat, and Khums)</p>
                                 <div class="services-title-border"></div>
                                 <p class="mt-3">
-                                <ul>
+                                <ul class="black">
                                   <li>
                                     Choosing any event/Majlis/ mahfil/seminar from Event Calendar and sponsor it for Eesale Thawab to your Marhumin and for your own Thawab, prosperity and health
                                   </li>
@@ -316,7 +314,7 @@
                                 <h5 class="mb-0 black">How To Donate Us</h5>
                                 <div class="services-title-border"></div>
                                 <p class="mt-3">
-                                  <a href="https://alsadiq.digitally.cc/" style="color:White">Click to Donate Alsadiq Trust</a>
+                                  <a href="https://alsadiq.digitally.cc/" style="color:black">Click to Donate Alsadiq Trust</a>
                                 </p>
                             </div>
                         </div>
@@ -330,16 +328,15 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
-                        <div class="text-center white">
+                        <div class="text-center black">
                             <h2><span class="font-weight-bold">Upcoming Programs</span></h2>
-
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5 ">
-                    <div class="col-lg-4 mt-3">
+                <div class="row mt-2">
+                    <div class="col-lg-4">
                     </div>
-                    <div class="col-lg-3 mt-3">
+                    <div class="col-lg-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
                                 <a href="images/blog/blog-1.jpg" id="pop" class="image-popup-vertical-fit">
@@ -354,7 +351,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt-3">
+                    <div class="col-lg-4">
                 </div>
             </div>
         </section>
@@ -376,7 +373,7 @@
                     <div class="col-lg-6">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg-light1">
                             <div class="mt-3 bg-light1 black">
-                                <h5 class="mb-0">Recent Jobs</h5>
+                                <h5 class="mb-0">Our Campaign</h5>
                                 <div class="services-title-border"></div>
                                 <p class="mt-3">Currently There Are No Jobs Posted</p>
                             </div>
@@ -418,26 +415,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row">
                     <div class="col-lg-4">
                         <div class="text-center">
                             <div>
                                 <i class="fas fa-phone h1 g"></i>
                             </div>
                             <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold white">Call Us On</h5>
-                                <p class=" white">+92(51) 2851996</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="text-center">
-                            <div>
-                                <i class="fas fa-envelope g h1"></i>
-                            </div>
-                            <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold white">Email Us At</h5>
-                                <p class="white">info@alsadiq.com</p>
+                                <h5 class="mb-0 contact_detail-title font-weight-bold black">Call Us On</h5>
+                                <p class="black">+92(51) 2851996</p>
                             </div>
                         </div>
                     </div>
@@ -447,9 +433,21 @@
                                 <i class="fas fa-map-marker g h1"></i>
                             </div>
                             <div class="mt-3">
-                                <h5 class="white mb-0 contact_detail-title font-weight-bold">Al Sadiq Trust</h5>
-                                <p class="white">G 9/2,Islamabad</p>
+                                <h5 class="mb-0 contact_detail-title font-weight-bold black">Al Sadiq Trust</h5>
+                                <p class="black">G 9/2,Islamabad</p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13279.158088194601!2d73.0230224!3d33.6885138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e3cc09b3ddd1800!2sAl%20Sadiq%20Trust!5e0!3m2!1sen!2s!4v1605952546524!5m2!1sen!2s" width="auto" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <ul class="list-unstyled list-inline mb-3">
+                                <li class="list-inline-item"><a href="https://www.facebook.com/alsadiqtrust/"><i class="fab fa-facebook g h1"></i></a></li>
+                                <li class="list-inline-item"><a href="https://twitter.com/alsadiqtrust"><i class="fab fa-twitter g h1"></i></a></li>
+                                <li class="list-inline-item"><a href="https://www.youtube.com/user/alsadiqtrust"><i class="fab fa-youtube g h1"></i></a></li>
+                            </ul>
+                        <div class="mt-3">
+                            <h5 class="mb-0 contact_detail-title font-weight-bold black">Follow Us On</h5>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -463,11 +461,7 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-md-12">
                         <div class="text-center text-white footer-alt">
-                            <ul class="list-unstyled list-inline mb-3">
-                                <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            </ul>
-                            <p class="text-muted mb-0"> 2020 &copy; alsadiqtrust.com</p>
+                            <p class=""> 2020 &copy; alsadiqtrust.com</p>
                         </div>
                     </div>
                 </div>
