--- a/library.html
+++ b/library.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -104,7 +104,12 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5 bg">
+                <div class="row bg">
+                <div class="col-lg-4">
+                  <div class="mt-4">
+                  <img src="images/gallery/6.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                </div>
+                </div>
                 <div class="col-lg-8">
                     <div class="text-center services-boxes rounded p-4 mt-4">
                         <div class="mt-4">
@@ -113,11 +118,6 @@
                             <p class="text-muted mt-3">There is a separate academic block in the Complex. The block houses a well furnished and stocked library.  The library already has over 16,000 books. A professional librarian and Assistant Librarian manage the library on modern lines and a committee headed by a senior trustee directly oversees the library. A number of men and women use the library on regular basis. There are programs ad exhibitions that are designed and implemented for related activities. Library also comprises a research room that is well equipped with necessary facilities. (Pic of library, after each facility give pics of that facility/section) </p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="mt-4">
-                  <img src="images/gallery/6.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                </div>
                 </div>
                 </div>
             </div>
