--- a/maghsal.html
+++ b/maghsal.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -104,7 +104,12 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-              <div class="row mt-5 bg">
+              <div class="row bg">
+              <div class="col-lg-4">
+                <div class="mt-4">
+                <img src="images/gallery/maghsal.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+              </div>
+              </div>
               <div class="col-lg-8">
                   <div class="text-center services-boxes rounded p-4 mt-4">
                     <div class="mt-4 bg">
@@ -113,11 +118,6 @@
                         <p class="text-muted mt-3">The complex has a small but well planned and well-equipped facility for performing Ghusal of remains of deceased Muslims. The facility has marble floors and counters, hot and cold water connection, a shower room for volunteers for the service, an air conditioned room for keeping the remains, if needed, until they are transported to their burial places, and a room for storing supplies Lists of male and female volunteers are maintained to perform these services. The facility is used regularly by Shia and Sunni communities</p>
                     </div>
                   </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="mt-4">
-                <img src="images/gallery/maghsal.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-              </div>
               </div>
               </div>
             </div>
