--- a/marriage-bureau.html
+++ b/marriage-bureau.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -104,7 +104,7 @@
         <!-- START SERVICES -->
         <section class="section bg-light1" id="services">
             <div class="container">
-                <div class="row mt-5">
+                <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center services-boxes rounded p-4 mt-4 bg">
                         <div class="mt-4 bg">
@@ -112,7 +112,7 @@
                             <div class="services-title-border"></div>
                             <p class="text-muted mt-3">Trust has established a marriage bureau for coordination between community members who intend to use this facility. A data base has been developed that is used to make community members able to coordinate\ for marriage purposes. All of the activities and procedures in this regard are run by keeping secrecy of the data strictly.</p>
                         </div>
-                  \  </div>
+                    </div>
                 </div>
                 </div>
             </div>
