--- a/upcoming.html
+++ b/upcoming.html
@@ -83,12 +83,12 @@
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
                       </div>
                     </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
-                      </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="calendar.html"><b>Al Sadiq Calendar</b></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upcoming.html"><b>Upcoming Programs</b></a>
+                                </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
                       </li>
@@ -106,13 +106,13 @@
           <div class="container">
               <div class="row justify-content-center">
                   <div class="col-lg-12">
-                      <div class="text-center white">
-                          <h2>Our <span class="font-weight-bold">Upcoming Programs</span></h2>
+                      <div class="text-center black">
+                          <h2 class="font-weight-bold">Our <span class="font-weight-bold">Upcoming Programs</span></h2>
                           <p>Appropriate functions ( Majalis, Mahafil, Seminars, Aamaal etc) are arranged by the Trust on the following occasions:</p>
                       </div>
                   </div>
               </div>
-              <div class="row mt-5 ">
+              <div class="row">
                   <div class="col-lg-3 mt-3">
                       <div class="rounded bg-white p-2">
                           <div class="img_blog">
