email is removed

--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     			<div class="container white">
     				<div class="row justify-content-between align-items-center">
     					<div class="col-12 col-md-auto">
-    						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
+    						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996  </p>
     					</div>
     					<div class="col-12 col-md-auto">
     					</div>
