--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="container white">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-12 col-md-auto">
-						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996 |&nbsp <i class="fas fa-envelope"></i>&nbsp info@alsadiq.com</p>
+						<p class="mb-0 py-2 text-center text-md-left"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp +92(51) 2851996  </p>
 					</div>
 					<div class="col-12 col-md-auto">
 					</div>
@@ -375,7 +375,7 @@
                             <div class="mt-3 bg-light1 black">
                                 <h5 class="mb-0">Our Campaign</h5>
                                 <div class="services-title-border"></div>
-                                <p class="mt-3">Currently There Are No Jobs Posted</p>
+                                <p class="mt-3">Currently There Are No Campaigns Posted</p>
                             </div>
                         </div>
                     </div>
