footer-settings, contact-update, color-update
footer-settings, contact-update, color-update

--- a/educational-activities.html
+++ b/educational-activities.html
@@ -128,26 +128,19 @@
         </section>
         <!-- END SERVICES -->
 
-        <!--START FOOTER-->
-        <footer class="footer bg-light">
-            <div class="container">
-                <div class="row justify-content-center text-center">
-                    <div class="col-md-12">
-                        <div class="text-center text-white footer-alt">
-                            <ul class="list-unstyled list-inline mb-3">
-                                <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            </ul>
-                            <p class="text-muted mb-0"> 2020 &copy; alsadiq.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!--END FOOTER-->
-
-        <!-- Back To Top -->
-        <a href="#" class="back_top"> <i class="mdi mdi-chevron-up"> </i> </a>
+           <!--START FOOTER-->
+           <footer class="footer bg-light">
+               <div class="container">
+                   <div class="row justify-content-center text-center">
+                       <div class="col-md-12">
+                           <div class="text-center text-white footer-alt">
+                               <p class=""> 2020 &copy; alsadiqtrust.com</p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </footer>
+           <!--END FOOTER-->
 
         <!-- JAVASCRIPTS -->
         <script src="js/jquery.min.js"></script>
