--- a/contact.html
+++ b/contact.html
@@ -102,111 +102,69 @@
       </nav>
       <!-- End Navbar -->
       <!-- START CONTACT -->
-        <section class="section" id="contact">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <h2 class="font-weight-bold"><span class="font-weight-bold">Contact</span> Us</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-lg-4">
-                        <div class="text-center">
-                            <div>
-                                <i class="fas fa-phone h1 text-custom"></i>
-                            </div>
-                            <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold">Call Us On</h5>
-                                <p class="text-muted">+92(51) 2851996</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="text-center">
-                            <div>
-                                <i class="fas fa-map-marker text-custom h1"></i>
-                            </div>
-                            <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold">Al Sadiq Trust</h5>
-                                <p class="text-muted">G 9/2,Islamabad</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                            <div class="text-center">
-                                <ul class="list-unstyled list-inline mb-3">
-                                    <li class="list-inline-item"><a href="https://www.facebook.com/alsadiqtrust/"><i class="fab fa-facebook g h1"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://twitter.com/alsadiqtrust"><i class="fab fa-twitter g h1"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.youtube.com/user/alsadiqtrust"><i class="fab fa-youtube g h1"></i></a></li>
-                                </ul>
-                            <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold black">Follow Us On</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-lg-12">
-                        <div class="form-kerri">
-                            <form>
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="form-group mt-2">
-                                            <input name="name" id="name" type="text" class="form-control" placeholder="Your Name*" required="">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group mt-2">
-                                            <input name="email" id="email" type="email" class="form-control" placeholder="Your Email*" required="">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="form-group mt-2">
-                                            <input type="text" class="form-control" id="subject" placeholder="Your Subject.." required=""/>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="form-group mt-2">
-                                            <textarea name="comments" id="comments" rows="4" class="form-control" placeholder="Your message..."></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-12 text-right">
-                                        <input type="submit" class="btn btn-custom" value="Send Message">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- END CONTACT -->
+      <section class="section bg-light1" id="contact">
+          <div class="container">
+              <div class="row justify-content-center">
+                  <div class="col-lg-12 black">
+                      <div class="text-center">
+                          <h2 class="font-weight-bold"><span class="font-weight-bold">Contact</span> Us</h2>
+                          <p class="text-muted mx-auto section-subtitle mt-3"></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-lg-4">
+                      <div class="text-center">
+                          <div>
+                              <i class="fas fa-phone h1 g"></i>
+                          </div>
+                          <div class="mt-3">
+                              <h5 class="mb-0 contact_detail-title font-weight-bold black">Call Us On</h5>
+                              <p class="black">+92(51) 2851996</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="text-center">
+                          <div>
+                              <i class="fas fa-map-marker g h1"></i>
+                          </div>
+                          <div class="mt-3">
+                              <h5 class="mb-0 contact_detail-title font-weight-bold black">Al Sadiq Trust</h5>
+                              <p class="black">G 9/2,Islamabad</p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13279.158088194601!2d73.0230224!3d33.6885138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e3cc09b3ddd1800!2sAl%20Sadiq%20Trust!5e0!3m2!1sen!2s!4v1605952546524!5m2!1sen!2s" width="auto" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="text-center">
+                          <ul class="list-unstyled list-inline mb-3">
+                              <li class="list-inline-item"><a href="https://www.facebook.com/alsadiqtrust/"><i class="fab fa-facebook g h1"></i></a></li>
+                              <li class="list-inline-item"><a href="https://twitter.com/alsadiqtrust"><i class="fab fa-twitter g h1"></i></a></li>
+                              <li class="list-inline-item"><a href="https://www.youtube.com/user/alsadiqtrust"><i class="fab fa-youtube g h1"></i></a></li>
+                          </ul>
+                      <div class="mt-3">
+                          <h5 class="mb-0 contact_detail-title font-weight-bold black">Follow Us On</h5>
+                      </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <!-- END CONTACT -->
 
-        <!--START FOOTER-->
-        <footer class="footer bg-light">
-            <div class="container">
-                <div class="row justify-content-center text-center">
-                    <div class="col-md-12">
-                        <div class="text-center text-white footer-alt">
-                            <ul class="list-unstyled list-inline mb-3">
-                                <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                                <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            </ul>
-                            <p class="text-muted mb-0"> 2020 &copy; alsadiq.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!--END FOOTER-->
+      <!--START FOOTER-->
+      <footer class="footer bg-light">
+          <div class="container">
+              <div class="row justify-content-center text-center">
+                  <div class="col-md-12">
+                      <div class="text-center text-white footer-alt">
+                          <p class=""> 2020 &copy; alsadiqtrust.com</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </footer>
+      <!--END FOOTER-->
 
         <!-- Back To Top -->
         <a href="#" class="back_top"> <i class="mdi mdi-chevron-up"> </i> </a>
